public/css/main.css
body {
    color: white;
    height: 100%;
    width: 100%;
}

html {
    background: rgba(35, 76, 134, 1);
    background: linear-gradient(180deg, rgba(2, 0, 36, 1) 0%, rgba(35, 76, 134, 1) 26%, rgba(129, 9, 45, 1) 100%);
    height: 100%;
    width: 100%;
    overflow: hidden;
}

h2 {
    text-align: center;
}

.image {
    border-radius: 50%;
    margin: auto;
    margin-bottom: 0px;
    margin-top: 0px;
    object-fit: cover;
    height: 300px;
    width: 300px;
}

.button {
    background-color: #688699;
    border: none;
    color: white;
    border-radius: 8px;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    font-weight: bold;
    display: inline-block;
    font-size: 16px;
    margin: auto;
    cursor: pointer;
    box-shadow: 0 0 8px #688699;
}

.top-level-flex {
    display: flex;
    flex-direction: row;
    height: 100%;
}

.empty-flex {
    flex: 1;
}

.content-column {
    display: flex;
    flex-direction: column;
    flex: 2;
}

.content-flex {
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex: 2;
    border-radius: 16px;
    background-color: #171616;
    padding: 1rem;
    -webkit-box-shadow: 0px 1px 11px 0px rgba(0, 0, 1, 1);
    -moz-box-shadow: 0px 1px 11px 0px rgba(0, 0, 1, 1);
    box-shadow: 0px 1px 11px 0px rgba(0, 0, 1, 1);
}

.social-flex {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}

.social-icon {
    height: 24px;
    width: 24px;
    cursor: pointer;
}

